третья загрузка файлов

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#">Поиск</a></li>
     </ul>
 </nav>
+
  <!--/ Навигация -->
  <button type="button">
     <img src="images/icon/login.svg" alt="Войти" width="16" height="16">
@@ -26,40 +27,39 @@
 </header>
 <!--/ Заголовок -->
 <!-- Основной контент -->
-    <main>
+<main>
         <!-- Первый экран -->
         <section>
             <div>
                 <h2>Добро пожаловать в страну книг!</h2>
                 <p>Огромный ассортимент книг по разным категориям.</p>
-                
+                <a href="#" target="_blank"> Каталог</a>
             </div>
             <img src="images/изображение книг.jpeg" alt="Изображение книг" width="602" height="800">
         </section>
         <!--/ Первый экран -->
 
- <section>
+         <section>
             <h2>Почему выбирают именно нас?</h2>
-            <p>указывай наиболее популярные теги. Это позволит быстро находить любые категории.</p>
             <ul>
                 <li>
-                    <img src="images/icon/menu.svg" alt="Иконка " width="22" height="24">
+                    <img src="images/иконка1.png" alt="Иконка " width="22" height="24">
                     <h3>Много книг</h3>
                     <p>Огромный выбор книг по разным категориям</p>
                 </li>
                 <li>
-                    <img src="images/icon/cook.svg" alt="Иконка" width="24" height="24">
+                    <img src="images/иконка2.png" alt="Иконка" width="24" height="24">
                     <h3>Они интересны</h3>
                     <p>Отзывы о каждой книге, не меньше 4,8 баллов</p>
                 </li>
                 <li>
-                    <img src="images/icon/chef.svg" alt="Иконка " width="24" height="23">
+                    <img src="images/иконка3.png" alt="Иконка " width="24" height="23">
                     <h3>Доступная цена</h3>
-                    <p></p>
+                    <p>Покупай книги по выгодым ценам</p>
                 </li>
         
             </ul>
-  </section>
+         </section>
 <main>
 <a href="#">Вход</a>
 <a href="#">Регистрация</a>
@@ -71,7 +71,26 @@
 
     </main>
     <footer>
-<p>Торощина Ирина,Епанова Оксана СТ-22</p>
+<p>Cайт создан Торощиной Ириной,Епановой Оксаной группа СТ-22</p>
+<ul>
+    <li><a href="#"> Правовая оговорка</a></li>
+    <li><a href="#"> Пользовательское соглашение</a></li>
+    <li><a href="#"> Политика конфиденциальности</a></li>
+</ul>
     </footer>
+ <!-- Форма "Войти" -->
+ <section>
+    <form action="/">
+        <h1>Вход в личный кабинет</h1>
+        <input type="email" name="email" placeholder="Номер телефона" required>
+        <input type="password" name="password" placeholder="Пароль" required>
+        <fieldset>
+            <input type="submit" value="Войти">
+            <button type="button">Отмена</button>
+        </fieldset>
+        <button type="button">У меня еще нет аккаунта</button>
+    </form>
+</section>
+<!--/ Форма "Войти" -->
 </body>
 </html>
